[gd_scene load_steps=4 format=2]

[ext_resource path="res://bootsplash.png" type="Texture" id=1]
[ext_resource path="res://ui_elements/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://ui_elements/mainmenu.gd" type="Script" id=3]

[node name="MainMenu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
grow_horizontal = 0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 960, 540 )
scale = Vector2( 1.15, 1.15 )
texture = ExtResource( 1 )

[node name="Menu" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -250.0
margin_right = 500.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menupoints" type="VBoxContainer" parent="Menu"]
margin_right = 1000.0
margin_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="GameCreateButton" type="Button" parent="Menu/Menupoints"]
margin_left = 400.0
margin_right = 599.0
margin_bottom = 44.0
size_flags_horizontal = 4
size_flags_vertical = 2
theme = ExtResource( 2 )
text = "Create Game"

[node name="GameJoinButton" type="Button" parent="Menu/Menupoints"]
margin_left = 417.0
margin_top = 76.0
margin_right = 583.0
margin_bottom = 120.0
size_flags_horizontal = 4
size_flags_vertical = 2
theme = ExtResource( 2 )
text = "Join Game"

[node name="ServerStartButton" type="Button" parent="Menu/Menupoints"]
margin_left = 331.0
margin_top = 152.0
margin_right = 668.0
margin_bottom = 196.0
size_flags_horizontal = 4
size_flags_vertical = 2
theme = ExtResource( 2 )
text = "Start Dedicated Server"

[node name="AppQuitButton" type="Button" parent="Menu/Menupoints"]
margin_left = 458.0
margin_top = 228.0
margin_right = 542.0
margin_bottom = 272.0
size_flags_horizontal = 4
size_flags_vertical = 2
theme = ExtResource( 2 )
text = "QUIT"

[node name="CreateGame" type="Control" parent="."]
visible = false
margin_left = 720.0
margin_top = 275.0
margin_right = 1162.0
margin_bottom = 605.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Control" parent="CreateGame"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CreateGame/Name"]
margin_right = 40.0
margin_bottom = 14.0
theme = ExtResource( 2 )
text = "Name:"

[node name="TextEdit" type="LineEdit" parent="CreateGame/Name"]
margin_left = 104.0
margin_right = 424.0
margin_bottom = 40.0
theme = ExtResource( 2 )
placeholder_text = "Player Name"

[node name="Port" type="Control" parent="CreateGame"]
margin_top = 51.0
margin_right = 40.0
margin_bottom = 91.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CreateGame/Port"]
margin_right = 40.0
margin_bottom = 14.0
theme = ExtResource( 2 )
text = "Port:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="LineEdit" parent="CreateGame/Port"]
margin_left = 104.0
margin_right = 228.0
margin_bottom = 40.0
theme = ExtResource( 2 )
text = "46690"

[node name="Create" type="Button" parent="CreateGame"]
margin_left = 128.0
margin_top = 108.0
margin_right = 327.0
margin_bottom = 152.0
theme = ExtResource( 2 )
text = "Create Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="CreateGame"]
margin_left = 128.0
margin_top = 164.0
margin_right = 327.0
margin_bottom = 208.0
theme = ExtResource( 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinGame" type="Control" parent="."]
visible = false
margin_left = 720.0
margin_top = 275.0
margin_right = 1162.0
margin_bottom = 605.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Control" parent="JoinGame"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="JoinGame/Name"]
margin_right = 40.0
margin_bottom = 14.0
theme = ExtResource( 2 )
text = "Name:"

[node name="TextEdit" type="LineEdit" parent="JoinGame/Name"]
margin_left = 104.0
margin_right = 424.0
margin_bottom = 40.0
theme = ExtResource( 2 )
placeholder_text = "Player Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Address" type="Control" parent="JoinGame"]
margin_top = 52.0
margin_right = 40.0
margin_bottom = 92.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="JoinGame/Address"]
margin_left = -36.0
margin_right = 92.0
margin_bottom = 38.0
theme = ExtResource( 2 )
text = "Address:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="LineEdit" parent="JoinGame/Address"]
margin_left = 104.0
margin_right = 424.0
margin_bottom = 40.0
theme = ExtResource( 2 )
placeholder_text = "127.0.0.1:46690"

[node name="Join" type="Button" parent="JoinGame"]
margin_left = 128.0
margin_top = 108.0
margin_right = 327.0
margin_bottom = 152.0
theme = ExtResource( 2 )
text = "Join Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="JoinGame"]
margin_left = 128.0
margin_top = 164.0
margin_right = 327.0
margin_bottom = 208.0
theme = ExtResource( 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Server" type="Control" parent="."]
visible = false
margin_left = 720.0
margin_top = 275.0
margin_right = 1162.0
margin_bottom = 605.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Control" parent="Server"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Server/Name"]
margin_right = 40.0
margin_bottom = 14.0
theme = ExtResource( 2 )
text = "Name:"

[node name="TextEdit" type="LineEdit" parent="Server/Name"]
margin_left = 104.0
margin_right = 424.0
margin_bottom = 40.0
theme = ExtResource( 2 )
placeholder_text = "Server Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Port" type="Control" parent="Server"]
margin_top = 51.0
margin_right = 40.0
margin_bottom = 91.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Server/Port"]
margin_right = 40.0
margin_bottom = 14.0
theme = ExtResource( 2 )
text = "Port:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="LineEdit" parent="Server/Port"]
margin_left = 104.0
margin_right = 228.0
margin_bottom = 40.0
theme = ExtResource( 2 )
text = "46690"

[node name="Create" type="Button" parent="Server"]
margin_left = 128.0
margin_top = 108.0
margin_right = 327.0
margin_bottom = 152.0
theme = ExtResource( 2 )
text = "Host Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="Server"]
margin_left = 128.0
margin_top = 164.0
margin_right = 327.0
margin_bottom = 208.0
theme = ExtResource( 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Menu/Menupoints/GameCreateButton" to="." method="_on_GameCreateButton_pressed"]
[connection signal="pressed" from="Menu/Menupoints/GameJoinButton" to="." method="_on_GameJoinButton_pressed"]
[connection signal="pressed" from="Menu/Menupoints/ServerStartButton" to="." method="_on_ServerStartButton_pressed"]
[connection signal="pressed" from="Menu/Menupoints/AppQuitButton" to="." method="_on_AppQuitButton_pressed"]
[connection signal="pressed" from="CreateGame/Create" to="." method="_on_Create_pressed"]
[connection signal="pressed" from="CreateGame/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="JoinGame/Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="JoinGame/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Server/Create" to="." method="_on_Create_pressed"]
[connection signal="pressed" from="Server/Back" to="." method="_on_Back_pressed"]
